# k3s.rocks

./: .gitignore  Dockerfile  README.md  curl.sh  develop.md  mkdocs.yml  multipass.md  multipass.sh  pyproject.toml  requirements.txt
.github/: FUNDING.yml
apps/system-info-web/app/: main.py  pyproject.toml  requirements.txt  start.sh
apps/system-info-web/app/tests/: test_main.py
docs/: argocd.md  auto-healing.md  basic-auth.md  erpnext.md  external-load-balancer.md  faq.md  first-deploy.md  https-cert-manager-letsencrypt.md  index.md  install-setup.md  keel.md  localstorage-longhorn.md  logging.md  metrics.md  plausible-analytics.md  private-registry.md  technitium-dns.md  traefik-dashboard.md  uptime-kuma.md
manifests/: alert-manager-ingress.yaml  argocd-ingressroute.yaml  argocd-tmp-ingress.yaml  argocd.yaml  basic-auth-middleware.yaml  basic-auth-registry-middleware.yaml  basic-auth-secret.yaml  custom-ephemeral-container.yml  echo-deployment.yaml  echo-ingress.yaml  echo-service.yaml  erpnext_newsite_manifest.yaml  erpnext_newsite_values.yaml  erpnext_notls_ingress.yaml  erpnext_replace_host_header_middleware.yaml  erpnext_tls_ingress.yaml  erpnext_values.yaml  ghost-ephemeral.yaml  ghost-localstorage.yaml  ghost-longhorn.yaml  grafana-ingress.yaml  keel.yaml  letsencrypt-prod.yaml  loki-datasource.yaml  longhorn-ui-ingress.yaml  plausible-localstorage.yaml  postgres-longhorn.yaml  prometheus-ingress.yaml  prometheus-values.yaml  pvc-ghost-localstorage.yaml  pvc-ghost-longhorn.yaml  pvc-registry-localstorage.yaml  pvc-registry-longhorn.yaml  registry-ui.yaml  (+17 more)
(+27 files in other folders)
